Fixed wrong flex-wrap value

--- a/src/styles/components/_controls.scss
+++ b/src/styles/components/_controls.scss
@@ -13,7 +13,7 @@
 }
 
 .no-wrap {
-  flex-wrap: none;
+  flex-wrap: nowrap;
   margin: 0;
 }
 .control {
